tat ca cac file dat sua (not finished)

--- a/assets/Component/header1.html
+++ b/assets/Component/header1.html
@@ -1,8 +1,11 @@
+<head>
+  <link rel="stylesheet" href="../css/header1.css" />
+</head>
 <header
   id="main-header"
-  class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 bg-transparent text-white"
+  class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 bg-transparent text-black bg-red"
 >
-  <div class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8">
+  <div class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 bg-black-200">
     <div class="flex items-center justify-between h-20">
       <div class="flex items-center gap-3">
         <a href="index.html" class="flex items-center gap-3 group">
@@ -27,7 +30,7 @@
         >
         <a
           class="text-sm font-medium hover:text-primary-hover transition-colors"
-          href="../../category.html"
+          href="../../danhmuc.html"
           >Thú cưng</a
         >
         <a
@@ -151,5 +154,8 @@
 <style>
   .md\:text-white {
     color: pink !important;
+  }
+  .bg-transparent {
+    background-color: #ffffff !important;
   }
 </style>
