lan cuoi that ne

--- a/assets/Component/footer.html
+++ b/assets/Component/footer.html
@@ -33,9 +33,9 @@
         <h4 class="text-gray-900 font-bold mb-4 footer-title">Hỗ trợ</h4>
         <ul class="space-y-3 text-sm text-gray-500 footer-links">
           <li><a href="#">Câu hỏi thường gặp</a></li>
-          <li><a href="#">Quy định nhận nuôi</a></li>
+          <li><a href="../../category.html">Quy định nhận nuôi</a></li>
           <li><a href="../../volunteer.html">Tình nguyện viên</a></li>
-          <li><a href="../../LienHe.html">Liên hệ</a></li>
+          <li><a href="../../contact.html">Liên hệ</a></li>
         </ul>
       </div>
 
