--- a/assets/Component/footer0.html
+++ b/assets/Component/footer0.html
@@ -29,8 +29,7 @@
       <div class="footer-column">
         <h4>Hỗ trợ</h4>
         <ul>
-          <li><a href="#">Câu hỏi thường gặp</a></li>
-          <li><a href="#">Quy định nhận nuôi</a></li>
+          <li><a href="category.html">Quy định nhận nuôi</a></li>
           <li><a href="volunteer.html">Tình nguyện viên</a></li>
           <li><a href="contact.html">Liên hệ</a></li>
         </ul>
